apps/web/app/globals.css
/* .bet-controller {
  background-color: #20202a;
}

.bet-controller .tabs-list > button,
.autobet-increase-on-win > div,
.autobet-increase-on-loss > div,
.audio-loader > button,
.wager-input > fieldset button,
.mines-count button,
.coin-flip-controller > div,
.button {
  background-color: #373745;
}
.coin-flip-controller > div {
  border-radius: 10px;
}

.submit-button {
  background: linear-gradient(270.62deg, #5dfcce 0.59%, #3254d9 96.56%);
}

.bet-controller .total-wager,
.max-payout,
.increase-by-input,
.wager-input > fieldset > div:first-of-type,
.autobet-stop-gain > fieldset div:first-of-type,
.autobet-stop-loss > fieldset div:first-of-type,
.autobet-form-field fieldset div:first-of-type,
.plinko-input fieldset div:first-of-type,
.max-reward,
.mines-count div:first-of-type,
.multiplier-input {
  background-color: transparent;
  border: 1px solid #37373a;
  border-radius: 10px;
}

.bet-history .bet-table .table-header,
.bet-history .bet-table .table-row {
  background-color: transparent;
  border-bottom: 1px solid #37373a;
}

.bet-table {
  border-collapse: collapse;
}

.wrapper .table-header {
  padding-top: 24px !important;
  padding-bottom: 24px !important;
}

.bet-table td {
  padding-top: 24px;
  padding-bottom: 24px;
  border-top: 1px solid #37373a;
}

.table-header th {
  padding-top: 12px;
  padding-bottom: 12px;
}

.bet-history .bet-history-tabs {
  border-bottom: 1px solid #37373a;
}

.bet-history .bet-history-tabs > div:first-of-type {
  display: none;
}

.bet-history .bet-history-tabs button[data-state='active'] {
  border-style: solid;
  border-bottom: 2px;
  border-style: solid;
  border-image: linear-gradient(to right, #facc15 6.45%, #ffe26d 31.6%, #facc15 51.59%) 1;
} */

